syntax = "proto3";
package zchain.pb.magmasc;

option go_package = "github.com/0chain/gosdk/zmagmacore/magmasc/pb";

message Provider {
  string id = 1;      // @gotags: json:"id" yaml:"id"
  string ext_id = 2;  // @gotags: json:"ext_id" yaml:"ext_id"
  string host = 3;    // @gotags: yaml:"host"
}
