syntax = "proto3";
package zchain.pb.magmasc;

option go_package = "github.com/0chain/gosdk/zmagmacore/magmasc/pb";

message User {
  string id = 1;          // @gotags: yaml:"id"
  string consumer_id = 2; // @gotags: yaml:"consumer_id"
}
